# easy-window

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake.in
include/EasyWindow/: Global.hpp  Surface.hpp  Window.hpp
include/EasyWindow/Enums/: Buttons.hpp  Keys.hpp  Modifiers.hpp  OriginCorner.hpp  States.hpp
scripts/: dependencies.py
scripts/common/: cmake.py  paths.py  utils.py
sources/: Surface.cpp  Window.cpp
